--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+    <session-config>
+        <session-timeout>10080</session-timeout> <!-- 10080min - 7 days -->
+        <cookie-config>
+            <max-age>7776000</max-age> <!-- 7776000sec - 3 months -->
+        </cookie-config>
+    </session-config>
+
+
 </web-app>
