--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
 
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/view/error404.jsp</location>
+    </error-page>
+
     <servlet>
         <servlet-name>FrontController</servlet-name>
         <servlet-class>by.epam.jwd.cyberbets.controller.FrontController</servlet-class>
