--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <log4j2.version>2.14.0</log4j2.version>
         <postgresql.jdbc.driver.version>42.2.18</postgresql.jdbc.driver.version>
         <jakarta.servlet.jsp.jstl.version>2.0.0</jakarta.servlet.jsp.jstl.version>
+        <apache.commons-lang3.version>3.12.0</apache.commons-lang3.version>
+        <gson.version>2.8.6</gson.version>
     </properties>
 
     <dependencies>
@@ -68,6 +70,16 @@
             <groupId>org.glassfish.web</groupId>
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
             <version>${jakarta.servlet.jsp.jstl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache.commons-lang3.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
     </dependencies>
 
