--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,17 @@
         <url-pattern>/resources/*</url-pattern>
     </servlet-mapping>
 
+
+    <filter>
+        <filter-name>RedirectFilter</filter-name>
+        <filter-class>by.epam.jwd.cyberbets.filter.RedirectFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>RedirectFilter</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
+
+
     <session-config>
         <session-timeout>10080</session-timeout> <!-- 10080min - 7 days -->
         <cookie-config>
