--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,14 +17,14 @@
     </servlet-mapping>
 
 
-<!--    <filter>-->
-<!--        <filter-name></filter-name>-->
-<!--        <filter-class></filter-class>-->
-<!--    </filter>-->
-<!--    <filter-mapping>-->
-<!--        <filter-name></filter-name>-->
-<!--        <url-pattern></url-pattern>-->
-<!--    </filter-mapping>-->
+    <filter>
+        <filter-name>AuthorizatoionFilter</filter-name>
+        <filter-class>by.epam.jwd.cyberbets.filter.AuthorizationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthorizatoionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 
     <session-config>
