--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+    <listener>
+        <listener-class>by.epam.jwd.cyberbets.listener.ApplicationContextListener</listener-class>
+    </listener>
+    <context-param>
+        <param-name>APP_RESOURCES_SOURCE_PATH</param-name>
+        <param-value>/home/eugene_gromadko/application</param-value>
+    </context-param>
+
+
     <servlet>
         <servlet-name>FrontController</servlet-name>
         <servlet-class>by.epam.jwd.cyberbets.controller.FrontController</servlet-class>
