--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
         <log4j2.version>2.14.1</log4j2.version>
         <postgresql.jdbc.driver.version>42.2.18</postgresql.jdbc.driver.version>
+        <jakarta.servlet.jsp.api.version>3.0.0</jakarta.servlet.jsp.api.version>
         <jakarta.servlet.jsp.jstl.version>2.0.0</jakarta.servlet.jsp.jstl.version>
         <apache.commons-lang3.version>3.12.0</apache.commons-lang3.version>
         <gson.version>2.8.6</gson.version>
@@ -28,6 +29,12 @@
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>5.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.servlet.jsp</groupId>
+            <artifactId>jakarta.servlet.jsp-api</artifactId>
+            <version>${jakarta.servlet.jsp.api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
