--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <jakarta.servlet.jsp.jstl.version>2.0.0</jakarta.servlet.jsp.jstl.version>
         <apache.commons-lang3.version>3.12.0</apache.commons-lang3.version>
         <gson.version>2.8.6</gson.version>
-        <password4j.version>1.5.2</password4j.version>
+        <password4j.version>1.5.3</password4j.version>
     </properties>
 
     <dependencies>
@@ -116,6 +116,7 @@
     </dependencies>
 
     <build>
+        <finalName>ROOT</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
